syntax="proto2";
import "nanopb.proto";

package rina.messages;
option optimize_for = LITE_RUNTIME;
import "CommonMessages.proto";

message policyDescriptor_t{											//Describes a policy
	optional string policyName = 1 [(nanopb).max_size = 20];		//The name of the policy
	optional string policyImplName = 2 [(nanopb).max_size = 20];	//The name of the implementation of the policy used in this DIF. Can be a hierarchical name
	optional string version = 3 [(nanopb).max_size = 20];			//The version of the policy implementation
	repeated property_t policyParameters = 4; 						//The paramters of the policy
}
